Fixing z-index issue with mobile nav

--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -2,7 +2,7 @@
 .site-header {
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
   padding: 20px 0;
   position: absolute;
